Create the screens and solve the pops

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: "androidx.navigation.safeargs.kotlin"
 
 android {
     compileSdkVersion 29
@@ -20,6 +21,16 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField("String", "TOKEN", "\"a4090dd68ed2530666874b4e3bd800e2\"")
+            buildConfigField("String", "FIXER_URL", "\"http://data.fixer.io/api/\"")
+            buildConfigField("String", "FLAG_URL", "\"https://www.countryflags.io/%s/flat/64.png\"")
+        }
+        debug {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField("String", "TOKEN", "\"a4090dd68ed2530666874b4e3bd800e2\"")
+            buildConfigField("String", "FIXER_URL", "\"http://data.fixer.io/api/\"")
+            buildConfigField("String", "FLAG_URL", "\"https://www.countryflags.io/%s/flat/64.png\"")
         }
     }
     compileOptions {
@@ -40,7 +51,19 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.2.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.2.2'
-    testImplementation 'junit:junit:4.12'
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
+    implementation("com.squareup.okhttp3:logging-interceptor:4.7.2")
+
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.4'
+    implementation "com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0"
+    implementation("io.coil-kt:coil:0.11.0")
+
+
+    testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
